--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <h1>joke project</h1>
 <div id="joke">This is a sample joke</div>
 
 
